# Mergist

./: .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  LICENSE  README.md  README.pt-BR.md  README.ru.md  commit-log.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: release.yml  tauri-build.yml
scripts/: check-svelte4-syntax.py  compare_files_list.py  compare_issues.py  compare_md.py  release.js
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  models.rs
src-tauri/src/converter/: files.rs  issues.rs  mod.rs  processor.rs  tree.rs
src-tauri/src/github/: client.rs  issues.rs  mod.rs  parser.rs
src/lib/: types.ts
src/lib/api/: tauri.ts
src/lib/components/: AboutToastAction.svelte  AboutToastBadges.svelte  AboutToastIcon.svelte  ConvertOptions.svelte  DownloadSection.svelte  IssuesOptions.svelte  ProgressBar.svelte  RepoForm.svelte  StatsPanel.svelte  StatusBar.svelte
src/lib/components/ui/: index.ts
src/lib/components/ui/accordion/: accordion-trigger.svelte  accordion.svelte  content.svelte  context.ts
src/lib/components/ui/alert/: alert-description.svelte  alert.svelte
src/lib/components/ui/badge/: badge.svelte
src/lib/components/ui/button/: button.svelte
src/lib/components/ui/card/: card-header.svelte  card.svelte
src/lib/components/ui/dropdown-menu/: dropdown-menu-checkbox-item.svelte  dropdown-menu-content.svelte  dropdown-menu-group-heading.svelte  dropdown-menu-item.svelte  dropdown-menu-label.svelte  dropdown-menu-radio-item.svelte  dropdown-menu-separator.svelte  dropdown-menu-shortcut.svelte  (+2 more)
src/lib/i18n/: index.ts
src/lib/i18n/locales/: en.json  pt-BR.json  ru.json
src/lib/stores/: conversion.ts
(+8 files in other folders)
